# gdrive-fsspec

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yaml  feature-request.yaml
.github/actions/setup/: action.yaml
.github/workflows/: ci.yaml  tests.yaml
gdrive_fsspec/: core.py
src/gdrive_fsspec/: _constants.py  _file.py  core.py  types.py  utils.py
tests/: conftest.py  test_core.py  test_core_auth.py  test_core_file.py  test_core_fs.py  test_helpers.py  test_integration.py  test_packaging.py
