[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "gdrive_fsspec"
dynamic = ["version"]
description = "File system on GDrive"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
maintainers = [
    {name = "Martin Durant", email = "martin.durant@alumni.utoronto.ca"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "fsspec",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "pydata_google_auth"
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "prek>=0.4.4",
    "ruff>=0.15.16",
    "pyrefly>=1.0.0",
    "google-api-python-client-stubs>=1.37.0",
]

[project.urls]
Source = "http://github.com/fsspec/gdrive-fsspec"

[tool.setuptools.packages.find]
where = ["."]
include = ["gdrive_fsspec"]

[tool.setuptools_scm]
version_file = "gdrive_fsspec/_version.py"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"gdrive_fsspec/_version.py" = ["ALL"]

[tool.pytest.ini_options]
addopts = """\
    --strict-markers \
    -m "not integration and not packaging"
    """

markers = [
    "integration: marks test as integration test consuming external resources (select with '-m integration')",
    "packaging: marks packaging tests that build distributions (select with '-m packaging')",
]

[tool.pyrefly]
project-includes = [
    "gdrive_fsspec/**/*.py",
]
baseline = "pyrefly-baseline.json"
python-version = "3.10"
